Fix/container top spacing (#1)
* feature: editing readme.md

* spacing and more fixes

--- a/style/style.css
+++ b/style/style.css
@@ -18,8 +18,8 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0 auto;
-    border-radius: 0 0 20px 25px;
+    margin: 10px auto 0 auto;
+    border-radius: 25px;
     width: 90vw;
     max-width: 580px;
     padding: 10px;
@@ -29,6 +29,7 @@ body {
 
 .display {
     max-width: 100%;
+    min-height: 200px;
     max-height: 100%;
     border-radius: 20px;
     margin: 20px 0; 
